--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/estilos.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <nav>
                 <ul class="navegador">
                     <li >
-                        <a class="Logo" href="index.html">Inicio</a> 
+                        <a href="index.html">Inicio</a> 
                     </li>
                     <li>
                         <a href="./section/encuentra-una-propiedad.html">Encuentra una propiedad</a>
