--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Document</title>
+    <title>Ana Maria propiedades Inicio</title>
+    <meta name="description" content="Encuentra la propiedad de tus sueños con nosotros, pagos en tarjeta o efectivo, contáctenos en nuestra sucursal para mas información.">
 </head>
 <body>
     <div class="envoltura1">
